tkFileBrowser - Alternative to filedialog for Tkinter
=====================================================
Copyright 2017 Juliette Monsel <j_4321@protonmail.com>

Changelog
---------

- tkFileBrowser 1.1.3
    * Corrected bug: grey/white color alternance not respected after sorting
    * Added __main__.py with an example

- tkFileBrowser 1.1.2
    * Added tooltips to display the full path of the shortcut if the mouse stays
      long enough over it.
    * Corrected bug: style of browser treeview applied to parent

- tkFileBrowser 1.1.1
    * Corrected bug: key browsing did not work with capital letters
    * Added specific icons for symlinks
    * Added handling of symlinks, the real path is returned instead of the link path

- tkFileBrowser 1.1.0
    * Corrected bug concerning the initialfile argument
    * Added column sorting (by name, size, modification date)

- tkFileBrowser 1.0.1
    * Set default filebrowser parent to None as for the usual filedialogs
      and messageboxes.

- tkFileBrowser 1.0.0
    * Initial version

