@@ -6,8 +6,11 @@ Changelog
 ---------
 
 - tkFileBrowser 1.1.3
-    * Corrected bug: grey/white color alternance not respected after sorting
-    * Added __main__.py with an example
+    * Correct bug: grey/white color alternance not always respected
+    * Add __main__.py with an example
+    * Add recent files shortcut
+    * Make the text of the validate and cancel buttons customizable
+    * Add possibility to disable new folder creation
 
 - tkFileBrowser 1.1.2
     * Added tooltips to display the full path of the shortcut if the mouse stays
